--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,7 +1,7 @@
 ---
 import TechnicalSkills from './TechnicalSkills.astro';
 import SkillsRadial from './SkillsRadial.astro';
-import SoftSkills from './SoftSkills.astro';
+import SoftSkills from './SoftSkillsClean.astro';
 
 ---
 
